complete the UnreachableMachineBlockELim class